modo-upload-macros/tests/ui/non_struct.rs
use modo_upload::FromMultipart;

#[derive(FromMultipart)]
enum BadForm {
    A,
    B,
}

fn main() {}
